[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
utils = {path = "../utils"}
protos = { path = "../protos" }
bincode = "1.3.3"


[dev-dependencies]
flatbuffers = "2.1"