[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protos = { path = "../protos" }
utils = {path = "../utils"}

bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
snafu = "0.7"

[dev-dependencies]
flatbuffers = "2.1"