[package]
name = "query"
version = "0.1.0"
edition = "2021"

[dependencies]
protos = { path = "../protos" }
trace = { path = "../trace" }
tskv = { path = "../tskv" }
models = { path = "../models" }
config = { path = "../config" }

criterion = { version = "0.3.5", features = ["async_tokio"] }
datafusion = { version = "10.0.0", features = ["scheduler"] }
tokio = { version = "1.17", features = ["full"] }
futures = { version = "0.3" }
parking_lot = "0.12"
pin-project = "1.0"
tokio-util = { version = "0.7.0" }
async-trait = "0.1"
rand = "0.8"
chrono = "0.4"
crossbeam = "0.8"
serde = { version = "1.0", features = ["derive"] }
snafu = "0.7"
sled = "0.34"
# use libc on unix like platforms to set worker priority in DedicatedExecutor
[target."cfg(unix)".dependencies.libc]
version = "0.2"

[dev-dependencies]
flatbuffers = "2.1"

[[bench]]
harness = false
name = "aggregate_function"

[[bench]]
harness = false
name = "scalar_function"
