[package]
name = "replication"
version.workspace = true
edition.workspace = true

[dependencies]
derive_traits = { path = "../common/derive_traits" }
models = { path = "../common/models" }
protos = { path = "../common/protos" }
trace = { path = "../common/trace" }
utils = { path = "../common/utils" }
metrics = { path = "../common/metrics" }

actix-web = { workspace = true }
clap = { version = "4.1.11", features = ["derive", "env"] }
openraft = { workspace = true, features = ["serde"] }
tempfile = { version = "3.4.0" }

async-backtrace = { workspace = true, optional = true }
async-trait = { workspace = true }
bincode = { workspace = true }
futures = { workspace = true, features = ["alloc"] }
heed = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
maplit = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serial_test = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "parking_lot", "rt-multi-thread", "signal", "sync", "time"] }
tonic = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
warp = { workspace = true }

[features]
default = []
backtrace = ["async-backtrace"]

[package.metadata.docs.rs]
all-features = true
