[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spi = { path = "../spi" }
config = { path = "../config" }
models = { path = "../models" }
query = { path = "../query" }
datafusion = { path = "../deps/datafusion" }
tskv = { path = "../tskv" }
catalog = { path = "../catalog" }

snafu = { version = "0.7", features = ["backtraces"] }
tokio = { version = "1.17", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
num_cpus = "1.0"

