[package]
name = "trace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.35"
tracing-subscriber = "0.2.25"
tracing-appender = "0.1.2"
tracing-error = "0.1.2"
color-eyre = "0.6"
once_cell = "1.12.0"
