[package]
name = "tskv"
version.workspace = true
edition.workspace = true

[dependencies]
config = { path = "../config" }
error_code = { path = "../common/error_code" }
lru_cache = { path = "../common/lru_cache" }
memory_pool = { path = "../common/memory_pool" }
meta = { path = "../meta" }
metrics = { path = "../common/metrics" }
models = { path = "../common/models" }
protos = { path = "../common/protos", features = ["test"] }
trace = { path = "../common/trace" }
utils = { path = "../common/utils" }
http_protocol = { path = "../common/http_protocol" }

arrow = { workspace = true }
arrow-array = { workspace = true }
async-backtrace = { workspace = true, optional = true }
async-trait = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
bzip2 = { workspace = true }
chrono = { workspace = true }
crc32fast = { workspace = true }
crossbeam-channel = { workspace = true }
dashmap = { workspace = true }
datafusion = { workspace = true }
flatbuffers = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true, features = ["std", "thread-pool"] }
integer-encoding = { workspace = true }
lazy_static = { workspace = true }
libc = { workspace = true }
minivec = { workspace = true }
mio = { workspace = true }
num-traits = { workspace = true }
num_cpus = { workspace = true }
num_enum = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true, features = ["nightly", "send_guard"] }
q_compress = { workspace = true }
radixdb = { workspace = true, features = ["custom-store"] }
rand = { workspace = true }
regex = { workspace = true }
roaring = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
skiplist = { workspace = true }
sled = { workspace = true }
snafu = { workspace = true }
snap = { workspace = true }
static_assertions = { workspace = true }
tokio = { workspace = true, features = ["full", "tracing"] }
tokio-util = { workspace = true }
walkdir = { workspace = true }
zstd = { workspace = true }
tonic = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
rio = { version = "0.9", optional = true }
tokio-uring = { version = "0.4", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true }


[features]
default = []
io_uring = ["rio"]
backtrace = ["async-backtrace"]

[dev-dependencies]
serial_test = { workspace = true }
criterion = { workspace = true, features = ["async_tokio"] }
parking_lot = { workspace = true, features = ["nightly"] }
rand = { workspace = true }
tempfile = { workspace = true }

[[bench]]
harness = false
name = "kvcore_bench"
