[package]
name = "tskv"
version.workspace = true
edition.workspace = true

[dependencies]
cache = { path = "../common/cache" }
config = { path = "../config" }
derive_traits = { path = "../common/derive_traits" }
http_protocol = { path = "../common/http_protocol", features = ["http_client"] }
memory_pool = { path = "../common/memory_pool" }
meta = { path = "../meta" }
metrics = { path = "../common/metrics" }
models = { path = "../common/models" }
protos = { path = "../common/protos" }
replication = { path = "../replication" }
trace = { path = "../common/trace" }
utils = { path = "../common/utils" }

arrow = { workspace = true, features = ["test_utils"] }
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-schema = { workspace = true }
async-backtrace = { workspace = true, optional = true }
async-recursion = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
bzip2 = { workspace = true }
chrono = { workspace = true }
crc32fast = { workspace = true }
datafusion = { workspace = true }
datafusion-proto = { workspace = true }
dircpy = { workspace = true }
flatbuffers = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true, features = ["std", "thread-pool"] }
hex = { workspace = true }
integer-encoding = { workspace = true }
lazy_static = { workspace = true }
libc = { workspace = true }
maplit = { workspace = true }
md-5 = { workspace = true }
memmap2 = { workspace = true }
minivec = { workspace = true }
num-traits = { workspace = true }
num_cpus = { workspace = true }
num_enum = { workspace = true }
openraft = { workspace = true, features = ["serde"] }
parking_lot = { workspace = true, features = ["nightly", "send_guard"] }
pco = { workspace = true }
radixdb = { workspace = true, features = ["custom-store"] }
rand = { workspace = true }
regex = { workspace = true }
roaring = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
skiplist = { workspace = true }
snafu = { workspace = true }
snap = { workspace = true }
sysinfo = { workspace = true, optional = false }
tokio = { workspace = true, features = ["full", "tracing"] }
tokio-util = { workspace = true }
tonic = { workspace = true }
walkdir = { workspace = true }
zstd = { workspace = true }
heed = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
rio = { version = "0.9.4", optional = true }
tokio-uring = { version = "0.4", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true }

[features]
default = []
backtrace = ["async-backtrace"]
io_uring = ["rio"]

[dev-dependencies]
anyhow = { workspace = true }
arrow = { workspace = true, features = ["test_utils"] }
assert_float_eq = { workspace = true }
criterion = { workspace = true, features = ["async_tokio"] }
parking_lot = { workspace = true, features = ["nightly"] }
rand = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }

[[bench]]
harness = false
name = "kvcore_bench"

[[bench]]
harness = false
name = "data_merge"
