[package]
name = "cache"
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = { workspace = true }
lru = {workspace = true}
tokio = { workspace = true , features = ["sync"]}
futures = { workspace = true, features = ["std"] }
async-trait = {workspace = true }
rand = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }

[[bench]]
harness = false
name = "lru"
