[package]
name = "cache"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-backtrace = { workspace = true, optional = true }
async-trait = { workspace = true }
futures = { workspace = true, features = ["std"] }
lru = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }

[[bench]]
harness = false
name = "lru"

[features]
default = []
backtrace = ["async-backtrace"]
