[package]
name = "datafusion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# datafusion_dep = { git = "https://github.com/apache/arrow-datafusion.git", tag = "10.0.0", features = ["scheduler"], default-features = false, package = "datafusion_dep" }
# datafusion = { version = "10.0.0", features = ["scheduler"], default-features = false, package = "datafusion" }
datafusion_dep = { version = "11.0.0", features = ["scheduler"], package = "datafusion" }