[package]
name = "derive_traits"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-backtrace = { workspace = true, optional = true }
derive_macros = { path = "../derive_macros" }
snafu = { workspace = true }

[features]
default = []
backtrace = ["async-backtrace"]
