[package]
name = "error_code"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[workspace]
#members = ["error_code_macro"]

[dependencies]
error_code_macro = { path = "error_code_macro" }
snafu = { workspace = true }
async-backtrace = { workspace = true, optional = true }

[features]
default = []
backtrace = ["async-backtrace"]