[package]
name = "http_protocol"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../models" }

async-backtrace = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
serde = { workspace = true }
snafu = { workspace = true }

[features]
default = []
backtrace = ["async-backtrace"]
http_client = []
