[package]
name = "http_protocol"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_traits = { path = "../derive_traits" }

async-backtrace = { workspace = true, optional = true }
brotli = { workspace = true }
bytes = { workspace = true }
flate2 = { workspace = true }
lz4_flex = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["rustls-tls"] }
serde = { workspace = true }
snafu = { workspace = true }
snap = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
zstd = { workspace = true }

[features]
default = []
backtrace = ["async-backtrace"]
http_client = []
