[package]
name = "license"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils"}
snafu = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
async-backtrace = { workspace = true, optional = true }
rsa = { workspace = true }
base64 = { workspace = true }
md-5 = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true, features = ["std"]}


[features]
default = []
backtrace = ["async-backtrace"]