[package]
name = "limiter_bucket"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../../config" }

chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["serde_derive"] }
parking_lot = { workspace = true }
async-backtrace = { workspace = true, optional = true }

[dev-dependencies]
bincode = { workspace = true }

[features]
default = []
backtrace = ["async-backtrace"]