[package]
name = "limiter_bucket"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../../config" }

async-backtrace = { workspace = true, optional = true }
chrono = { workspace = true, features = ["serde"] }
parking_lot = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }

[dev-dependencies]
bincode = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
backtrace = ["async-backtrace"]
