[package]
name = "line_protocol"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protos = {path = "../protos"}
utils = { path = "../utils" }
snafu = { workspace = true }
flatbuffers = {workspace = true}
