[package]
name = "lru_cache"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "main"
harness = false

[dependencies]
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
utils = { path = "../utils" }
async-backtrace = { workspace = true, optional = true }

[features]
default = []
backtrace = ["async-backtrace"]

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["full"] }