[package]
name = "mem_allocator"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { workspace = true, default-features = false }
tikv-jemalloc-ctl = { version = "0.5", optional = true }
tikv-jemalloc-sys = "0.5"

[dev-dependencies]
chrono = { workspace = true}
