[package]
name = "memory_pool"
version.workspace = true
edition.workspace = true

[dependencies]
trace = { path = "../trace" }

async-backtrace = { workspace = true, optional = true }
datafusion = { workspace = true }
parking_lot = { workspace = true, features = ["nightly"] }

[features]
default = []
backtrace = ["async-backtrace"]
