[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protos = { path = "../protos" }
utils = { path = "../utils" }
trace = { path = "../trace" }

arrow-schema = { workspace = true,  features = ["serde"] }
async-trait = { workspace = true }
bincode = { workspace = true }
datafusion = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
serde_json = { workspace = true }
datafusion-proto = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
flatbuffers = { workspace = true }
