[package]
name = "models"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protos = { path = "../protos" }
utils = { path = "../utils" }
trace = { path = "../trace" }
error_code = {path = "../error_code"}
config = { path = "../../config"}

arrow-schema = { workspace = true,  features = ["serde"] }
async-trait = { workspace = true }
bincode = { workspace = true }
datafusion = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
serde_json = { workspace = true }
datafusion-proto = { workspace = true }
uuid = { workspace = true }
derive_builder = { workspace = true }
openssl = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

[dev-dependencies]
flatbuffers = { workspace = true }
