[package]
name = "models"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../../config" }
error_code = { path = "../error_code" }
protos = { path = "../protos" }
trace = { path = "../trace" }
utils = { path = "../utils" }

arrow-schema = { workspace = true, features = ["serde"] }
async-backtrace = { workspace = true, optional = true }
async-trait = { workspace = true }
bincode = { workspace = true }
bcrypt = { workspace = true }
byteorder = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
datafusion = { workspace = true }
datafusion-proto = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
flatbuffers = { workspace = true }
libc = { workspace = true }
minivec = { workspace = true }
openssl = { workspace = true }
parking_lot = { workspace = true }
pin-project = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true, features = ["full", "tracing"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
snap = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = ["Win32_Storage_FileSystem"] }

[features]
default = []
backtrace = ["async-backtrace"]
[dev-dependencies]
flatbuffers = { workspace = true }
