[package]
name = "protocol_parser"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../models" }
protos = { path = "../protos" }
utils = { path = "../utils" }

atoi_simd = { workspace = true }
bytes = { workspace = true }
fast-float = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
flatbuffers = { workspace = true }
async-backtrace = { workspace = true, optional = true }
lazy_static = { workspace = true }
parking_lot = { workspace = true }
datafusion = { workspace = true }

[features]
default = []
backtrace = ["async-backtrace"]
