[package]
name = "protocol_parser"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../models" }
protos = { path = "../protos" }
utils = { path = "../utils" }

async-backtrace = { workspace = true, optional = true }
atoi_simd = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
datafusion = { workspace = true }
fast-float = { workspace = true }
flatbuffers = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
prost ={ workspace = true }

[features]
default = []
backtrace = ["async-backtrace"]
